project/force-app/main/default/objects/Contract_Line_Item__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipName>Contract_Line_Item_Business_Entitys</relationshipName>
</CustomField>