project/force-app/main/default/objects/Contract_Line_Item__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <label>Company Code</label>
    <type>Text</type>
    <length>255</length>
</CustomField>