project/force-app/main/default/objects/Contract_Line_Item__c/fields/Condition_Area__c.field-meta.xml
<CustomField>
    <fullName>Condition_Area__c</fullName>
    <label>Condition Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>