project/force-app/main/default/objects/Contract_Line_Item__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>MasterDetail</type>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Contract_Line_Item_Contracts</relationshipName>
</CustomField>