project/force-app/main/default/objects/Contract_Line_Item__c/fields/Is_Present_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Is_Present_Contract_Line__c</fullName>
    <label>Is Present Contract Line</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>