project/force-app/main/default/objects/Contract_Line_Item__c/fields/Max_Range__c.field-meta.xml
<CustomField>
    <fullName>Max_Range__c</fullName>
    <label>Max Range</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>