project/force-app/main/default/objects/Contract_Line_Item__c/fields/Min_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Range__c</fullName>
    <label>Min Range</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>