project/force-app/main/default/objects/Contract_Line_Item__c/fields/Rent_Price_VND__c.field-meta.xml
<CustomField>
    <fullName>Rent_Price_VND__c</fullName>
    <label>Rent Price (VND)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>