project/force-app/main/default/objects/Contract_Line_Item__c/fields/Revenue_Shared__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Shared__c</fullName>
    <label>% Revenue Shared</label>
    <type>Text</type>
    <length>255</length>
</CustomField>