project/force-app/main/default/objects/Contract_Line_Item__c/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <label>RO</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Contract_Line_Item_ROs</relationshipName>
</CustomField>