project/force-app/main/default/objects/Contract_Line_Item__c/fields/SAP_Contract_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Contract_Line_Id__c</fullName>
    <label>SAP Contract Line Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>