project/force-app/main/default/objects/Contract_Line_Item__c/fields/Start_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_End_Date__c</fullName>
    <label>Start - End Date</label>
    <type>Text</type>
    <length>255</length>
</CustomField>