project/force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Price_in_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_in_Line__c</fullName>
    <label>Total Price in Line</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>